--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 Flask==2.1.0
-torch==1.10.0
+torch==1.13.1
 transformers==4.12.0
+trl[peft]
+bitsandbytes
+loralib
+git+https://github.com/huggingface/transformers.git@main
+sentencepiece
